src/app/login/login.component.css
/* embeded Mohave font */
@font-face {
    font-family: 'mohaveregular';
    src: url('mohave-regular-webfont.woff2') format('woff2'),
         url('mohave-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
.display-4{
    padding-top: 10%;
    padding-bottom: 1%;
    padding-left: 5%;
    font-family: "mohaveregular", sans-serif;
    font-size: 50px;
}
.container1{
    background:black;
    color: white;
    padding-right: 0;
}
.head{
    padding-top: 10%;
    padding-bottom: 3%;
    font-family: "mohaveregular", sans-serif;
    color: black;
}
.text1{
    padding-top: 5%;
    padding-left: 5%;
    font-family: -apple-system-short-body, BlinkMacSystemFont, sans-serif;
    font-size: 30px;
}
.head2{
    padding-top: 10%;  
    font-family: "mohaveregular", sans-serif;
    /* font-family: -apple-system-headline, BlinkMacSystemFont, sans-serif; */
    color: black;
    padding-left: 5%;
    padding-bottom: 1%;
}
.text2{
   color: black;
   padding-bottom: 3%; 
   font-family: -apple-system-short-body, BlinkMacSystemFont, sans-serif;
    
}
.head2-1{
    padding-top: 5%;  
    font-family: "mohaveregular", sans-serif;
    color: black;
    padding-left: 5%;
    padding-bottom: 3%;
}
.text3{
    color: black;    
    font-family: -apple-system-caption1, BlinkMacSystemFont, sans-serif;
    font-size: 20px;
}
.text4{
    color: black;
    padding-top: 5%; 
    padding-left: 5%;
    font-family: -apple-system-caption1, BlinkMacSystemFont, sans-serif;
    font-size: 20px;
}
.head3{
    padding-top: 5%; 
    padding-left: 5%;
}

.head4{
    padding-top: 5%;
    padding-left: 5%;
}
.container2{
    padding-left: 0;
    padding-right: 0%;
}
.card-img{
    padding-left: 0;    
}
.c5Title{
    padding-top: 5%;
    padding-bottom: 5%;
    text-align: center;
    color: black;
    font-family: "mohaveregular", sans-serif;
}
.lead{
    background: transparent;
    color: white;
}
.teamImage{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

div.row.team{
	width: 50%;
	margin-left: auto;
	margin-right: auto;
	min-width: 300px;
}

